cooreção dos testes unitarios de ConsultasController